--- a/SG_MAUI_RamSerDav_/MVVM/Views/GestionUsuariosView.xaml
+++ b/SG_MAUI_RamSerDav_/MVVM/Views/GestionUsuariosView.xaml
@@ -2,6 +2,33 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SG_MAUI_RamSerDav_.MVVM.Views.GestionUsuariosView"
-             Title="GestionUsuariosView">
-   
+             Title="GestionUsuariosView"
+             NavigationPage.HasNavigationBar="False">
+
+    <Grid RowDefinitions=".3*,.7*">
+        <VerticalStackLayout>
+            <Entry Placeholder="Email" Text="{Binding UsuarioActual.Email}"/>
+            <Entry Placeholder="Password" Text="{Binding UsuarioActual.Password}"/>
+            <Entry Placeholder="EsDelegado" Text="{}"/>
+            <Button Text="Guardar" Command="{Binding GuardarCommand}"/>
+            <Button Text="Borrar" Command="{Binding EliminarCommand}"/>
+        </VerticalStackLayout>
+        <CollectionView Grid.Row="1" ItemsSource="{Binding ListaUsuarios}" 
+                    SelectionMode="Single" 
+                    SelectedItem="{Binding UsuarioActual}">
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <Frame Padding="5">
+                        <StackLayout>
+                            <Label Text="{Binding Email}"/>
+                            <Label Text="{Binding Password}"/>
+                        </StackLayout>
+                    </Frame>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
+        <!--<Label x:Name="sinUsuarios" Text="No hay usuarios en la BD." IsVisible="False" /> //Esto esta comentado de momento hasta avanzar mas en el desarrollo
+        <Image x:Name="imagenSinUsuarios" Source="imagen_sin_usuarios.png" IsVisible="False" />-->
+    </Grid>
+
 </ContentPage>
