--- a/SG_MAUI_RamSerDav_/MVVM/Views/LoginView.xaml
+++ b/SG_MAUI_RamSerDav_/MVVM/Views/LoginView.xaml
@@ -3,16 +3,16 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SG_MAUI_RamSerDav_.MVVM.Views.LoginView"
              Title="LoginView">
-    <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Padding="20">
-        <!-- Imagen, Elige una imagen -->
+    <VerticalStackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Padding="20">
+        <!-- Imagen -->
         <Image Source="algooo.jpg" Aspect="AspectFit" HeightRequest="200" />
 
-        <!-- Lógica de Texto -->
-        <Entry Placeholder="Username" Text="{Binding usuarioActual.Email}" />
-        <Entry Placeholder="Password" IsPassword="True" Text="{Binding usuarioActual.Password}" />
+        <!-- Logica de Texto -->
+        <Entry Placeholder="Username" Text="{Binding Username}" />
+        <Entry Placeholder="Password" IsPassword="True" Text="{Binding Password}" />
 
         <!-- Botones -->
-        <Button Text="Aceptar" Command="{Binding aceptarCommand}" IsEnabled="{Binding estaHabilitado}" />
+        <Button Text="Aceptar" Command="{Binding aceptarCommand}" IsEnabled="{Binding IsAceptarEnabled}" />
         <Button Text="Limpiar" Command="{Binding limpiarCommand}" />
-    </StackLayout>
+    </VerticalStackLayout>
 </ContentPage>
