--- a/SG_MAUI_RamSerDav_/MVVM/Views/LoginView.xaml
+++ b/SG_MAUI_RamSerDav_/MVVM/Views/LoginView.xaml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:conv="clr-namespace:SG_MAUI_RamSerDav_.MVVM.Converter"
@@ -31,6 +30,7 @@
             <!-- Botones -->
             <Button Text="Aceptar" Command="{Binding aceptarCommand}" IsEnabled="{Binding IsAceptarEnabled}" />
             <Button Text="Limpiar" Command="{Binding limpiarCommand}" />
+            <Button Text="Salir" Command="{Binding ExitCommand}" />
 
             <Switch Toggled="CambiarTema_Toggled" VerticalOptions="Center" 
                     IsToggled="{Binding TemaOscuroActivado}"/>
