gitflow-feature-stash: #32_Boton_Limpiar_gestionUsuarios

--- a/SG_MAUI_RamSerDav_/MVVM/Views/GestionUsuariosView.xaml
+++ b/SG_MAUI_RamSerDav_/MVVM/Views/GestionUsuariosView.xaml
@@ -30,6 +30,7 @@
             <Label  Text="{Binding UsuarioActual.EsDelegado,Converter={StaticResource ConversorBooleanText}}"/>
             <Button Text="Guardar" Command="{Binding GuardarCommand}"/>
             <Button Text="Borrar" Command="{Binding EliminarCommand}"/>
+            <Button Text="Limpiar" Command="{Binding LimpiaCommand}" />
         </VerticalStackLayout>
         
         
