--- a/SG_MAUI_RamSerDav_/MVVM/Views/LoginView.xaml
+++ b/SG_MAUI_RamSerDav_/MVVM/Views/LoginView.xaml
@@ -13,8 +13,8 @@
             <!-- Color Con Degradado-->
             <StackLayout.Background>
                 <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
-                    <GradientStop Color="YellowGreen" Offset="0" />
-                    <GradientStop Color="DarkBlue" Offset="1" />
+                    <GradientStop Color="LightBlue" Offset="0" />
+                    <GradientStop Color="MediumPurple" Offset="1" />
                 </LinearGradientBrush>
             </StackLayout.Background>
 
