Reparado error en login y frame usuarios

--- a/SG_MAUI_RamSerDav_/MVVM/Views/LoginView.xaml
+++ b/SG_MAUI_RamSerDav_/MVVM/Views/LoginView.xaml
@@ -35,7 +35,7 @@
             </HorizontalStackLayout>
 
             <!-- Logica de Texto -->
-            <Entry Placeholder="Username" Text="{Binding Username}" />
+            <Entry Placeholder="Email" Text="{Binding Email}" />
             <Entry Placeholder="Password" IsPassword="True" Text="{Binding Password}" />
 
             <!-- Botones -->
