--- a/SG_MAUI_RamSerDav_/MVVM/Views/LoginView.xaml
+++ b/SG_MAUI_RamSerDav_/MVVM/Views/LoginView.xaml
@@ -19,10 +19,13 @@
             </StackLayout.Background>
 
             <!-- Imagen -->
-            <HorizontalStackLayout HorizontalOptions="CenterAndExpand">
-                <Image Source="maui.png" Aspect="AspectFit" HeightRequest="200" HorizontalOptions="CenterAndExpand"/>
+            
+            
+            <HorizontalStackLayout HorizontalOptions="CenterAndExpand" Margin="50,50,50,50">
+                <Image Source="maui.png" Aspect="AspectFit" HeightRequest="200" HorizontalOptions="CenterAndExpand" />
                 
-                <VerticalStackLayout HorizontalOptions="EndAndExpand" VerticalOptions="CenterAndExpand">
+                
+                <VerticalStackLayout HorizontalOptions="EndAndExpand" VerticalOptions="End" Margin="50,50,50,50">
                 <Switch Toggled="CambiarTema_Toggled" VerticalOptions="Center" 
                  IsToggled="{Binding TemaOscuroActivado}"/>
                 
